--- a/Projeto_Web/Assembly-CSharp.csproj
+++ b/Projeto_Web/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Enemies\Enemy.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Menu\ButtonCommands.cs" />
     <Compile Include="Assets\Scripts\Menu\SlidersStart.cs" />
