--- a/Projeto_Web/Assembly-CSharp.csproj
+++ b/Projeto_Web/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Enemy\Weapon.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Menu\ButtonCommands.cs" />
+    <Compile Include="Assets\Scripts\Menu\ObjectiveItem.cs" />
     <Compile Include="Assets\Scripts\Menu\SlidersStart.cs" />
     <Compile Include="Assets\Scripts\Menu\Textbox.cs" />
     <Compile Include="Assets\Scripts\Meteor.cs" />
